# rise-thesis

./: .gitignore  Cargo.toml  README.md  README_old.md  build.sh  compile_to_cwasm.sh  config.yaml  hash_binary_name.py  result_1.txt  spin.toml  task_to_memory_kb.csv
.cargo/: config.toml
feature_predictions/: predictions.json
results/: evaluation_metrics.txt  evaluation_metrics_baseline.txt  evaluation_metrics_my_algo.txt  manual.txt  result_0.txt  result_1.txt  result_1756674627123.txt  result_2.txt  result_3.txt  result_35.txt  result_4.txt  result_7.txt  result_fib_opt_0_0.txt  result_fib_opt_0_1.txt  result_fib_opt_0_10.txt  result_fib_opt_0_11.txt  result_fib_opt_0_12.txt  result_fib_opt_0_13.txt  result_fib_opt_0_16.txt  result_fib_opt_0_18.txt  result_fib_opt_0_19.txt  result_fib_opt_0_20.txt  result_fib_opt_0_21.txt  result_fib_opt_0_3.txt  result_fib_opt_0_9.txt  result_fibonacci_2_12.txt  result_fibonacci_2_13.txt  result_fibonacci_2_14.txt  result_fibonacci_2_16.txt  result_fibonacci_2_18.txt  result_fibonacci_2_19.txt  result_fibonacci_2_20.txt  result_fibonacci_2_22.txt  result_fibonacci_2_24.txt  result_fibonacci_2_4.txt  result_fibonacci_2_6.txt  result_fibonacci_2_7.txt  result_fibonacci_2_9.txt  result_matmul_1_11.txt  result_matmul_1_12.txt  (+21 more)
src/: all_tasks.rs  channel_objects.rs  encoders_decoders.rs  encoders_decoders_objects.rs  evaluation_metrics.rs  example.rs  jobs_order_optimizer.rs  lib.rs  main.rs  memory_monitoring.rs  requests_queue.rs  scheduler.rs  scheduler_algorithms.rs  server.rs  utils.rs  various.rs  wasm_loaders.rs  wasm_loaders_old.rs  wasm_loaders_with_trait.rs  worker.rs
src/api/: api_functions.rs  api_handlers.rs  api_objects.rs  mod.rs
src/memory_prediction/: features_extractor.rs  memory_prediction.rs  memory_prediction_utils.rs  mod.rs  standard_scaler.rs
src/optimized_scheduling_preprocessing/: features_extractor.rs  mod.rs  scheduler_algorithms.rs
src/optimized_scheduling_preprocessing/execution_time_prediction/: mod.rs  time_prediction.rs  time_prediction_utils.rs
src/optimized_scheduling_preprocessing/memory_prediction/: memory_prediction.rs  memory_prediction_utils.rs  mod.rs  (+1 more)
src/wasm_loaders/: mod.rs  wasm_loader_basic.rs  wasm_loader_wasi_nn.rs
wasm-modules/: Cargo.toml  fib.rs  fib.wasm  inference-component-onnx.wasm  inference_component_onnx.wasm  math_tasks.wasm  math_tasks.wit  math_tasks_modules.wasm  matrix.wit  matrix_multiplication.wasm  matrix_multiplication_component.cwasm  matrix_multiplication_component.wasm  matrix_transpose.wasm  prime_number_checker.wasm  proof_of_work.rs
wasm-modules/old_modules/: math_tasks_components.wasm  matrix_multiplication.wasm
(+16 files in other folders)
