[package]
name = "rise-thesis"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
futures = "0.3"
lazy_static = "1.4"
rand = "0.9.1"
core_affinity = "0.8.3"
wasmtime = "34.0.1"
wasmtime-wasi = "34.0.1"
anyhow = "1.0.98"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
bincode = "2.0.1"
serde = "1.0.219"
serde_json = "1.0.140"
async-trait = "0.1"


[profile.release]
lto = true
codegen-units = 1
opt-level = "z"      # optimize for size
strip = "debuginfo"  # strip debug info
panic = "abort"
