[package]
name = "rise-thesis"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
futures = "0.3"
lazy_static = "1.4"
rand = "0.9.1"
core_affinity = "0.8.3"
anyhow = "1.0.98"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
bincode = "2.0.1"
async-trait = "0.1"
actix-multipart = "0.6"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"
wasmtime = { git = "https://github.com/natassaf/wasmtime.git", branch = "release-35-update-ort-version" }
wasmtime-wasi = { git = "https://github.com/natassaf/wasmtime.git", package = "wasmtime-wasi", branch = "release-35-update-ort-version" }
wasmtime-wasi-nn = { git = "https://github.com/natassaf/wasmtime.git", package = "wasmtime-wasi-nn", branch = "release-35-update-ort-version", features = ["onnx"] }
wit-parser = "0.236"
serde_json = "1.0.142"
serde = "1.0.219"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"      # optimize for size
strip = "debuginfo"  # strip debug info
panic = "abort"
