[package]
name = "rise-thesis"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
futures = "0.3"
core_affinity = "0.8.3"
anyhow = "1.0.98"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
async-trait = "0.1"
wasmtime = { git = "https://github.com/natassaf/wasmtime.git", branch = "release-35-update-ort-version" }
wasmtime-wasi = { git = "https://github.com/natassaf/wasmtime.git", package = "wasmtime-wasi", branch = "release-35-update-ort-version" }
wasmtime-wasi-nn = { git = "https://github.com/natassaf/wasmtime.git", package = "wasmtime-wasi-nn", branch = "release-35-update-ort-version", features = ["onnx"] }
wit-parser = "0.240"
serde_json = "1.0.142"
serde = "1.0.219"
serde_yaml = "0.9"
flate2 = "1.0"
base64 = "0.22.1"
regex = "1.11.3"
ort = { version = "2.0.0-rc.10" }
ndarray = "0.16"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"      # optimize for size
strip = "debuginfo"  # strip debug info
panic = "abort"
